--- a/src/components/about_section.astro
+++ b/src/components/about_section.astro
@@ -42,7 +42,7 @@ const iconsize = 30;
         flex-direction: row;
         flex-wrap: wrap;
         align-items: center;
-        justify-content: space-between;
+        justify-content: space-around;
         margin: 60px 0;
     }
 
