--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import DescriptionSection from "../components/description_section.astro";
 import ExperienceSection from "../components/experience_section.astro";
 import ProjectsSection from "../components/projects_section.astro";
 import SkillsSection from "../components/skills_section.astro";
+import UpButton from "../components/up_button.astro";
 import Layout from "../layouts/layout.astro";
 ---
 
@@ -13,4 +14,5 @@ import Layout from "../layouts/layout.astro";
     <ExperienceSection />
     <SkillsSection />
     <ProjectsSection />
+    <UpButton />
 </Layout>
