--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -43,6 +43,7 @@ const maxwidth = "800px";
 	}
 
 	html {
+		scroll-behavior: smooth;
 		display: flex;
 		flex-direction: column;
 		flex-wrap: nowrap;
@@ -68,6 +69,12 @@ const maxwidth = "800px";
 		);
 		filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#020024",GradientType=1);
 		color: white;
+	}
+
+	@media (prefers-reduced-motion: reduce) {
+		html {
+			scroll-behavior: auto;
+		}
 	}
 
 	body {
