--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -28,6 +28,7 @@ const maxwidth = "800px";
 <style define:vars={{ maxwidth }}>
 	html,
 	body {
+		--bg-card: rgb(247, 247, 247);
 		font-family:
 			system-ui,
 			-apple-system,
