Header items - color and font weight

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -27,7 +27,8 @@
 
     a {
         text-decoration: none;
-        color: white;
+        color: rgba(255 255 255 / 0.85);
+        font-weight: bold;
         position: relative;
         transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
         transition-duration: 400ms;
