--- a/src/components/skill_item.astro
+++ b/src/components/skill_item.astro
@@ -47,6 +47,10 @@ const img = `/icons/${getImgFromSkill(name)}`;
     }
 
     article span {
+        user-select: none; /* Standard syntax */
+        -webkit-user-select: none; /* Chrome, Safari, and Opera */
+        -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
         position: absolute;
         inset: 0;
         width: 100%;
