--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -6,7 +6,7 @@ const title: string = "Damian Aldair";
 const description: string =
 	"Porfolio de Damian Aldair para ver experiencia, proyectos llevados a cabo y aptitudes.";
 
-const maxwidth = "800px";
+const maxwidth = 800;
 ---
 
 <!doctype html>
@@ -84,7 +84,7 @@ const maxwidth = "800px";
 		flex-wrap: nowrap;
 		align-items: stretch;
 		min-width: 300px;
-		max-width: var(--maxwidth);
+		max-width: calc(1px * var(--maxwidth));
 		margin: 0 20px;
 	}
 </style>
