Space between sections

--- a/src/components/skills_section.astro
+++ b/src/components/skills_section.astro
@@ -22,6 +22,10 @@ const iconsize = 30;
 </section>
 
 <style>
+    section {
+        margin-bottom: 40px;
+    }
+
     div {
         display: flex;
         flex-direction: row;
