--- a/src/components/projects_section.astro
+++ b/src/components/projects_section.astro
@@ -31,6 +31,10 @@ const iconsize = 30;
 </section>
 
 <style>
+    section {
+        margin-bottom: 40px;
+    }
+
     div {
         display: flex;
         flex-direction: row;
