Adding real info to Repo

--- a/src/components/description_section.astro
+++ b/src/components/description_section.astro
@@ -10,9 +10,10 @@ import { getXpYears } from "../scripts/utils";
         <div class="line line2"></div>
     </div>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque id
-        libero dicta tempora, adipisci, quis eos, saepe perspiciatis quos illum
-        ipsum ea sed fugiat repellendus odit commodi illo tenetur quod?
+        Graduado de Ingeniería Informática en la Universidad Tecnológica de La
+        Habana. Centrado en el desarrollo de aplicaciones móviles y apacionado
+        por la UI y UX. Dispuesto a afrontar nuevos retos y a experimentar con
+        nuevas tecnologías. Enfocado en resultados eficientes y de calidad.
     </p>
 </section>
 
@@ -42,5 +43,6 @@ import { getXpYears } from "../scripts/utils";
         border-bottom: 2px solid white;
         padding-bottom: 50px;
         margin-bottom: 50px;
+        text-wrap: pretty;
     }
 </style>
