--- a/src/components/experience_section.astro
+++ b/src/components/experience_section.astro
@@ -100,6 +100,10 @@ const arrowsize = 18;
         font-weight: 500;
     }
 
+    p {
+        text-wrap: pretty;
+    }
+
     a {
         text-decoration: none;
         color: white;
