Refactoring TS files

--- a/src/components/experience_section.astro
+++ b/src/components/experience_section.astro
@@ -1,9 +1,6 @@
 ---
-import {
-    experiences,
-    getExperienceDate,
-    type Experience,
-} from "../scripts/repo";
+import { experiences, type Experience } from "../scripts/repo";
+import { getExperienceDate } from "../scripts/utils";
 import BriefcaseIcon from "./icons/briefcase.astro";
 import SectionTitle from "./section_title.astro";
 
