--- a/src/components/skill_item.astro
+++ b/src/components/skill_item.astro
@@ -1,5 +1,5 @@
 ---
-import { getImgFromSkill } from "../scripts/repo";
+import { getImgFromSkill } from "../scripts/utils";
 
 interface Props {
     name: string;
