--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -22,7 +22,37 @@
 
     nav {
         display: inline-flex;
-        gap: 40px;
+        gap: 100px;
+    }
+
+    @media screen and (max-width: 650px) {
+        nav {
+            gap: 80px;
+        }
+    }
+
+    @media screen and (max-width: 600px) {
+        nav {
+            gap: 60px;
+        }
+    }
+
+    @media screen and (max-width: 500px) {
+        nav {
+            gap: 40px;
+        }
+    }
+
+    @media screen and (max-width: 420px) {
+        nav {
+            gap: 30px;
+        }
+    }
+
+    @media screen and (max-width: 370px) {
+        nav {
+            gap: 15px;
+        }
     }
 
     a {
