--- a/src/components/experience_section.astro
+++ b/src/components/experience_section.astro
@@ -94,6 +94,11 @@ const arrowsize = 18;
         font-weight: 200;
     }
 
+    h3,
+    p {
+        color: var(--text-color);
+    }
+
     h3 {
         font-weight: 500;
     }
