--- a/src/components/projects_section.astro
+++ b/src/components/projects_section.astro
@@ -22,7 +22,7 @@ const iconsize = 30;
                         img={p.img}
                         name={p.name}
                         description={p.description}
-                        skills={p.skills}
+                        skillImages={p.skillImages}
                         url={p.url}
                     />
                 ))
