--- a/src/components/social_media.astro
+++ b/src/components/social_media.astro
@@ -40,7 +40,7 @@ const mail = href.startsWith("mailto:");
 
     a {
         text-decoration: none;
-        color: white;
+        color: var(--text-color);
 
         display: flex;
         align-items: center;
