--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -28,9 +28,10 @@ const maxwidth = 800;
 <style define:vars={{ maxwidth }}>
 	html,
 	body {
+		--text-color: rgb(225 240 255);
 		--fg-color: rgb(200 230 255);
 		--bg-color: rgb(0 20 35);
-		--bg-card: rgb(247, 247, 247);
+		--bg-card: rgb(255 255 255 / 0.2);
 		font-family:
 			system-ui,
 			-apple-system,
