--- a/src/components/about_section.astro
+++ b/src/components/about_section.astro
@@ -59,6 +59,8 @@ const iconsize = 30;
     h1 {
         font-size: 40px;
         text-align: center;
+        color: var(--text-color);
+        margin: 33px 15px;
     }
 
     nav {
