--- a/src/components/up_button.astro
+++ b/src/components/up_button.astro
@@ -19,7 +19,7 @@ const iconsize = 24;
     };
 </script>
 
-<a id="up" href="#">
+<a id="up" href="#" title="Ir al inicio">
     <svg
         width={iconsize}
         height={iconsize}
