--- a/src/components/description_section.astro
+++ b/src/components/description_section.astro
@@ -11,16 +11,16 @@ import { getXpYears } from "../scripts/utils";
         <hr class="line" />
     </div>
     <p>
-        <span class="p1"
-            >Graduado de Ingeniería Informática en la Universidad Tecnológica de
+        <span class="p1">
+            Graduado de Ingeniería Informática en la Universidad Tecnológica de
             La Habana.
         </span>
-        <span class="p2"
-            >Centrado en el desarrollo de aplicaciones móviles y apacionado por
-            la UI y UX.
+        <span class="p2">
+            Centrado en el desarrollo de aplicaciones móviles con Flutter y
+            apacionado por la UI y UX.
         </span>
-        <span class="p3"
-            >Dispuesto a afrontar nuevos retos y a experimentar con nuevas
+        <span class="p3">
+            Dispuesto a afrontar nuevos retos y a experimentar con nuevas
             tecnologías. Enfocado en resultados eficientes y de calidad.
         </span>
     </p>
