Changing reverse method for test

--- a/src/components/experience_section.astro
+++ b/src/components/experience_section.astro
@@ -15,7 +15,7 @@ const arrowsize = 18;
     </SectionTitle>
     <div class="section">
         {
-            experiences.toReversed().map((e: Experience) => (
+            experiences.reverse().map((e: Experience) => (
                 <article>
                     <div class="date">
                         <div class="circle" />
