--- a/src/components/projects_section.astro
+++ b/src/components/projects_section.astro
@@ -16,7 +16,7 @@ const iconsize = 30;
     <div>
         {
             projects
-                .toReversed()
+                .reverse()
                 .map((p) => (
                     <ProjectItem
                         img={p.img}
