color-scheme: only light

--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -34,6 +34,10 @@ const maxwidth = 800;
 </html>
 
 <style define:vars={{ maxwidth }}>
+	:root {
+		color-scheme: only light;
+	}
+
 	html,
 	body {
 		--text-color: rgb(225 240 255);
