--- a/src/components/about_section.astro
+++ b/src/components/about_section.astro
@@ -9,7 +9,7 @@ const iconsize = 30;
 ---
 
 <section>
-    <img src="/avatar.png" alt="avatar" width={imgsize} height={imgsize} />
+    <img src="/avatar.webp" alt="avatar" width={imgsize} height={imgsize} />
     <div id="info">
         <h1>Damian Aldair</h1>
         <nav>
