--- a/src/components/description_section.astro
+++ b/src/components/description_section.astro
@@ -17,7 +17,7 @@ import { getXpYears } from "../scripts/utils";
         </span>
         <span class="p2">
             Centrado en el desarrollo de aplicaciones móviles con Flutter y
-            apacionado por la UI y UX.
+            apasionado por la UI y UX.
         </span>
         <span class="p3">
             Dispuesto a afrontar nuevos retos y a experimentar con nuevas
