Minor updating of span color. Year of experience implicit update.

--- a/src/components/description_section.astro
+++ b/src/components/description_section.astro
@@ -5,8 +5,7 @@ import { getXpYears } from "../scripts/utils";
 <section>
     <div class="xp">
         <h2>
-            <sup>+</sup><span class="years">{getXpYears}</span> años de
-            experiencia
+            <sup>+</sup><span class="years">{getXpYears}</span> años de experiencia
         </h2>
         <hr class="line" />
     </div>
@@ -21,7 +20,10 @@ import { getXpYears } from "../scripts/utils";
         </span>
         <span class="p3">
             Dispuesto a afrontar nuevos retos y a experimentar con nuevas
-            tecnologías. Enfocado en resultados eficientes y de calidad.
+            tecnologías.
+        </span>
+        <span class="p4">
+            Enfocado en resultados eficientes y de calidad.
         </span>
     </p>
     <hr />
@@ -70,5 +72,9 @@ import { getXpYears } from "../scripts/utils";
 
     .p3 {
         color: rgb(255 190 190);
+    }
+
+    .p4 {
+        color: rgb(190, 241, 255);
     }
 </style>
